packages/optimizer/core/src/snapshots/qwik_core__test__should_ignore_passive_jsx_events_without_handlers.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 4768
expression: output
---
==INPUT==


		import { component$ } from '@qwik.dev/core';

		const PassiveOnlyComponent = component$(() => {
			return (
				<div>
					<button passive:click>
						click
					</button>
					<button passive:scroll passive:touchstart>
						scroll
					</button>
				</div>
			);
		});
		
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_PassiveOnlyComponent_component_LuEXQIZuHLw = /*#__PURE__*/ qrl(()=>import("./test.tsx_PassiveOnlyComponent_component_LuEXQIZuHLw"), "PassiveOnlyComponent_component_LuEXQIZuHLw");
//
/*#__PURE__*/ componentQrl(q_PassiveOnlyComponent_component_LuEXQIZuHLw);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;cAG+B\"}")
============================= test.tsx_PassiveOnlyComponent_component_LuEXQIZuHLw.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
//
export const PassiveOnlyComponent_component_LuEXQIZuHLw = ()=>{
    return /*#__PURE__*/ _jsxSorted("div", null, null, [
        /*#__PURE__*/ _jsxSorted("button", null, null, "click", 3, null),
        /*#__PURE__*/ _jsxSorted("button", null, null, "scroll", 3, null)
    ], 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;0DAG0C;IACvC,qBACC,WAAC;sBACA,WAAC,sBAAqB;sBAGtB,WAAC,sBAAyC;;AAK7C\"}")
/*
{
  "origin": "test.tsx",
  "name": "PassiveOnlyComponent_component_LuEXQIZuHLw",
  "entry": null,
  "displayName": "test.tsx_PassiveOnlyComponent_component",
  "hash": "LuEXQIZuHLw",
  "canonicalFilename": "test.tsx_PassiveOnlyComponent_component_LuEXQIZuHLw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    92,
    273
  ]
}
*/
== DIAGNOSTICS ==

[]
